--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ img, video, audio, iframe, table, form {
 /*/////// LAYOUT ////////*/
 
 .wrapper {
-  width: 960px;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -197,9 +197,9 @@ img, video, audio, iframe, table, form {
 /*/////// SOCIAL ////////*/
 
 #social {
-  position: fixed;
-  top: 163px;
-  right: 20px;
+  position: absolute;
+  top: 82px;
+  right: 4px;
   width: 40px;
   z-index: 2;
 }
